kubernetes/apps/monitoring/victoria-metrics/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authelia-ext-authz-vmagent-victoria-metrics
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: vmagent-victoria-metrics
  extAuth:
    headersToExtAuth:
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    failOpen: false
    http:
      backendRefs:
        - name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authelia-ext-authz-vmalert-victoria-metrics
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: vmalert-victoria-metrics
  extAuth:
    headersToExtAuth:
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    failOpen: false
    http:
      backendRefs:
        - name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authelia-ext-authz-vmalertmanager-victoria-metrics
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: vmalertmanager-victoria-metrics
  extAuth:
    headersToExtAuth:
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    failOpen: false
    http:
      backendRefs:
        - name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authelia-ext-authz-vmsingle-victoria-metrics
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: vmsingle-victoria-metrics
  extAuth:
    headersToExtAuth:
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    failOpen: false
    http:
      backendRefs:
        - name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
